# speed_sensor

./: CMakeLists.txt  README.md  package.xml
include/: serial.hpp
launch/: speed_sensor_driver.launch
src/: serial.cpp  speed_sensor_node.cpp
