<?xml version="1.0"?>
<package format="2">
  <name>speed_sensor_driver</name>
  <version>0.0.0</version>
  <description>The speed_sensor_driver package</description>
  <maintainer email="yudai.yamazaki@map4.jp">yudai.yamazaki</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
